// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders margin 1`] = `
.emotion-0 {
  font-size: 32px;
  margin: 0px;
}

@media screen and (min-width:400px) {
  .emotion-0 {
    margin: 4px;
  }
}

@media screen and (min-width:640px) {
  .emotion-0 {
    margin: 8px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:1280px) {
  .emotion-0 {
    margin: 32px;
  }
}

<h1
  className="emotion-0"
/>
`;

exports[`Heading renders margin 2`] = `
.emotion-0 {
  font-size: 32px;
  margin: 4px;
}

@media screen and (min-width:400px) {
  .emotion-0 {
    margin: 4px;
  }
}

@media screen and (min-width:640px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 16px;
  }
}

<h1
  className="emotion-0"
/>
`;

exports[`Heading renders padding 1`] = `
.emotion-0 {
  font-size: 32px;
  margin: 0px;
  padding: 0px;
}

@media screen and (min-width:400px) {
  .emotion-0 {
    padding: 4px;
  }
}

@media screen and (min-width:640px) {
  .emotion-0 {
    padding: 8px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 16px;
  }
}

@media screen and (min-width:1280px) {
  .emotion-0 {
    padding: 32px;
  }
}

<h1
  className="emotion-0"
/>
`;

exports[`Heading renders padding 2`] = `
.emotion-0 {
  font-size: 32px;
  margin: 0px;
  padding: 4px;
}

@media screen and (min-width:400px) {
  .emotion-0 {
    padding: 4px;
  }
}

@media screen and (min-width:640px) {
  .emotion-0 {
    padding: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 16px;
  }
}

<h1
  className="emotion-0"
/>
`;
